--- a/src/main/res/layout/fragment_home_screen.xml
+++ b/src/main/res/layout/fragment_home_screen.xml
@@ -18,7 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/tableLayout"
@@ -39,6 +39,7 @@
                     android:layout_marginEnd="5dp"
                     android:text="Home Screen"
                     android:textAlignment="center"
+                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                     android:textSize="30sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -48,11 +49,14 @@
 
                 <Button
                     android:id="@+id/logoutButton"
-                    android:layout_width="0dp"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:background="@color/colorPrimary"
                     android:onClick="logoutEmployee"
                     android:text="Logout"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView21" />
@@ -63,7 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginEnd="8dp"
                     android:fontFamily="sans-serif"
                     android:text="Curbb"
@@ -72,8 +76,9 @@
                     android:textSize="50sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/logoutButton" />
+                    app:layout_constraintTop_toTopOf="@+id/imageView" />
 
 
                 <ImageView
@@ -81,12 +86,12 @@
                     android:layout_width="400dp"
                     android:layout_height="400dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginEnd="8dp"
                     android:src="@mipmap/ic_launcher_foreground"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                    app:layout_constraintTop_toBottomOf="@+id/logoutButton" />
 
                 <EditText
                     android:id="@+id/editText2"
@@ -94,7 +99,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:inputType="textMultiLine"
-                    android:text="Curbb is a locally based trash-can  service. Our employees are dedicated and very kind."
+                    android:text="Curbb is a locally based trash-can  service. Our employees are dedicated and kind."
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
                     app:layout_constraintEnd_toEndOf="parent"
